--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
@@ -127,6 +127,10 @@ STONE:
   totalProgress: 100
   dropItem:
   - 石头
+COBBLESTONE:
+  totalProgress: 100
+  dropItem:
+  - 古恒石
 STAINED_CLAY_0:
   powerPickaxe: 65
   totalProgress: 200
