--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -69,6 +69,20 @@
 粉水母:
     drop:
         - "生命凝胶:1:1:0.125"
+蛤:
+    soundDamaged: entity.irongolem.hurt
+    drop:
+        - "铜币:200:1000:1"
+        - "沉沦渊石:1:4:1"
+        - "棱晶碎片:2:3:1"
+富养鳐鱼:
+    drop:
+        - "铜币:300:1250:1"
+        - "棱晶碎片:5:9:1"
+鬼铃水母:
+    drop:
+        - "铜币:1000:2250:1"
+        - "伏打凝胶:1:1:0.2"
 巨像蛤:
     soundDamaged: entity.irongolem.hurt
     drop:
@@ -108,6 +122,65 @@
         - "铜币:200:300:1"
         - "风暴之颚:1:1:1"
         - "灼炎弯刀:1:1:0.0667"
+灵魂饮食者:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:250:750:1"
+        - "饮食者钓竿:1:1:0.05"
+强化灵魂饮食者:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:1000:6000:1"
+        - "饮食者钓竿:1:1:0.05"
+        - "血石:1:1:0.25"
+殒命妖灵:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:250:750:1"
+强化殒命妖灵:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:1000:6000:1"
+        - "血石:1:1:0.25"
+绝望之石:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:250:750:1"
+强化绝望之石:
+    buffInflict:
+        - "硫磺火|40|1"
+    buffImmute:
+        - "燃烧"
+        - "狱炎"
+        - "硫磺火"
+    drop:
+        - "铜币:1000:6000:1"
+        - "血石:1:1:0.25"
 巫毒恶魔:
     buffInflict:
         - "失明|600|0.33"
@@ -309,6 +382,26 @@
         - "泰坦之心:1:1:1"
     buffInflict:
         - "幻星感染|100|1"
+    buffImmute:
+        - "中毒"
+        - "幻星感染"
+对撞观星眼:
+    soundDamaged: entity.hit.astral
+    drop:
+        - "铜币:500:1000:1"
+        - "星尘:1:3:1"
+    buffInflict:
+        - "幻星感染|60|1"
+    buffImmute:
+        - "中毒"
+        - "幻星感染"
+幻星探测器:
+    soundDamaged: entity.hit.astral
+    drop:
+        - "铜币:1000:2000:1"
+        - "星尘:1:3:0.5"
+    buffInflict:
+        - "幻星感染|40|1"
     buffImmute:
         - "中毒"
         - "幻星感染"
