--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/projectiles.yml
@@ -962,6 +962,11 @@
         damageMulti: 1
         name: 冲击波1
         velocity: 0
+毒刺:
+    gravity: 0
+    liveTime: 80
+    buffInflict:
+        - "中毒|100|1"
 圣骑士锤:
     blockHitAction: thru
     gravity: 0
